# qalculate-rs

./: Cargo.toml  build.rs
examples/: basic.rs
src/: calculator.rs  ffi.rs  lib.rs
tests/: integration.rs
wrapper/: qalculator.cpp
