[package]
name = "qalculate-rs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for Qalculate library"
license = "GPL-2.0-only"
keywords = ["calculator", "math", "qalculate", "scientific"]
categories = ["science", "api-bindings"]
repository = "https://github.com/maxim-palshin/qalculate-rs"
homepage = "https://github.com/maxim-palshin/qalculate-rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
cc = "1.2.55"
pkg-config = "0.3.32"

[dependencies]
libc = "0.2.180"
